# oai-temporal-wealth-management

./: .env.example  .gitignore  README.md  pyproject.toml
data/: beneficiaries.json
docs/: CHAT_FLOW_SEQUENCE.md
src/basic/: README.md
src/basic/api/: __main__.py  main.py
src/basic/cli/: __main__.py  main.py
src/common/: account_context.py  agent_constants.py  beneficiaries_manager.py  client_helper.py  client_manager.py  db2_config.py  db2_session.py  investment_manager.py  user_message.py  util.py
src/frontend/: README.md
src/frontend/src/: App.css  App.js  config.js
src/temporal/: README.md  run_open_account_workflow.py  run_send_compliance_approval.py  run_worker.py
src/temporal/activities/: beneficiaries.py  clients.py  db2_session_activities.py  investments.py  open_account.py
src/temporal/api/: API_USAGE.md  README.md  __main__.py  main.py
src/temporal/claim_check/: claim_check_codec.py  claim_check_plugin.py
src/temporal/codec_server/: codec_server.py
src/temporal/services/: __init__.py  workflow_request_service.py
src/temporal/session/: db2_session.py  temporal_db2_session.py
src/temporal/workflows/: open_account_workflow.py  supervisor_workflow.py
src/temporal_supervisor/claim_check/: claim_check_codec.py  claim_check_plugin.py
src/temporal_supervisor/codec_server/: codec_server.py
tests/: test_claim_check_codec.py
